[gd_scene load_steps=6 format=3 uid="uid://clno20edg02pd"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_244n5"]
[ext_resource type="FontFile" uid="uid://c0iniddeu6fuq" path="res://assets/fonts/BalsamiqSans-Bold.ttf" id="1_ky0di"]

[sub_resource type="LabelSettings" id="LabelSettings_wwh8d"]
font = ExtResource("1_ky0di")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 5)

[sub_resource type="LabelSettings" id="LabelSettings_bkxlt"]
font = ExtResource("1_ky0di")
font_size = 50
font_color = Color(1, 0.247059, 0.188235, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 5)

[sub_resource type="LabelSettings" id="LabelSettings_xbml6"]
font = ExtResource("1_ky0di")
font_size = 25
font_color = Color(0.901961, 0.768627, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 2)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_244n5")

[node name="ScorePanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 10

[node name="ScoreText" type="Label" parent="ScorePanel/MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_wwh8d")
horizontal_alignment = 1

[node name="GameOverPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/MarginContainer"]
layout_mode = 2

[node name="GameOverText" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "game over"
label_settings = SubResource("LabelSettings_bkxlt")
horizontal_alignment = 1
uppercase = true

[node name="PressToResetText" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Press R to start over"
label_settings = SubResource("LabelSettings_xbml6")
horizontal_alignment = 1
uppercase = true
